[feature] overlay registry